--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.2",
     "gsap": "^3.12.5",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
     "next": "14.1.1",
+    "pino": "^9.5.0",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.3",
