--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.2",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "gsap": "^3.12.5",
     "imagesloaded": "^5.0.0",
