--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "uuid": "^11.0.2",
     "wowjs": "^1.1.3"
   }
 }
