--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.5",
     "@next/third-parties": "^15.0.1",
     "@popperjs/core": "^2.11.8",
     "aws-sdk": "^2.1691.0",
@@ -16,10 +19,12 @@
     "bootstrap": "^5.3.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
     "next": "14.1.1",
+    "next-mdx-remote": "^5.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.3",
