--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gsap": "^3.12.5",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
-    "next": "14.1.1",
+    "next": "^14.2.24",
     "next-mdx-remote": "^5.0.0",
     "react": "^18",
     "react-dom": "^18",
